# AI-drug-agent

./: .dockerignore  .env.example  .env.template  .gitignore  DEPLOYMENT_A2A.md  Dockerfile  README.md  docker-compose.checkpoint-test.yml  docker-compose.live-tools.yml  docker-compose.openai.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  deps.py  main.py  secret_resolver.py  settings.py
app/a2a/: agent_cards.py  container_healthcheck.py  contracts.py  orchestrator_application_service.py  orchestrator_completion_validation.py  orchestrator_context_projection.py  orchestrator_discovery.py  orchestrator_dispatch.py  orchestrator_execution_loop.py  orchestrator_execution_state.py  orchestrator_post_ingestion.py  orchestrator_readiness.py  orchestrator_reconciliation.py  orchestrator_result_ingestion.py  orchestrator_resume.py  orchestrator_retry.py  orchestrator_routing_prompt.py  orchestrator_routing_service.py  orchestrator_routing_validation.py  orchestrator_task_builder.py  patent_evidence_worker.py  patent_evidence_worker_main.py  runtime.py  step5_worker.py  step5_worker_main.py  step6_worker.py  step6_worker_main.py  structure_worker.py  structure_worker_main.py  worker_server.py
app/agents/: antibody_cdr3_extraction.py  base_agent.py  candidate_context_agent.py  developability_agent.py  evidence_agent.py  patent_evidence_agent.py  patent_evidence_selection_policy.py  patent_ip_agent.py  step_05_enrichment_registry.py  step_05_selection_policy.py  step_06_available_fields.py  step_06_capability_registry.py  step_06_interpretation.py  step_06_runtime_value_resolver.py  step_06_schema_mapping_selector.py  step_09_available_fields.py  step_09_input_projection.py  step_09_runtime_execution.py  step_14_prior_art.py  (+8 more)
build_tools/: check_cpu_dependencies.py
docs/: ToolUniverse_MCP_Runtime_Status_CN.md
scripts/: audit_tooluniverse_official_metadata.py  export_pipeline_snapshot.py  hydrate_pipeline_snapshot.py  import_tool_inventory.py  probe_multi_agent_literature_search.py  run_dev.sh  run_gemini_provider_smoke.py  run_gemini_step1_6_pdb_smoke.py  run_gemini_step1_6_smoke.py  run_gemini_step2_benchmark_smoke.py  run_live_llm_step1_5_pdb_smoke.py  run_live_llm_step1_6_pdb_smoke.py  run_live_public_wrappers_smoke.py  run_llm_step1_6_pdb_smoke.py  run_mcp_smoke.py  run_minimal_graph.py  run_step1_12_graph.py  run_step1_14_graph.py  run_step1_4_orchestration_smoke.py  run_step1_6_graph.py  run_step1_9_graph.py  seed_local_run.py
tests/: conftest.py  test_gitignore.py  test_llm_provider_selection.py  test_settings_live_policy.py
(+296 files in other folders)
