[project]
name = "synagentics-adc-backend"
version = "0.1.0"
description = "SynAgentics ADC Agent Pipeline backend (Step 1-14 MVP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
    "langgraph>=0.2",
    "python-a2a>=0.5",
    "google-genai>=0.3",
    "openpyxl>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[s3,dynamodb,sqs]>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
