[project]
name = "synagentics-adc-backend"
version = "0.1.0"
description = "SynAgentics ADC Agent Pipeline backend (Step 1-14 MVP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
    "langgraph==1.2.6",
    "langgraph-checkpoint-postgres==3.1.0",
    "psycopg[binary,pool]==3.3.4",
    "python-a2a>=0.5",
    "google-genai>=0.3",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "biopython>=1.84",
    "abnumber>=0.4.4",
    "anarci>=2026.2.13.2",
]

[project.optional-dependencies]
deployment = [
    "tooluniverse==1.2.2",
    "esm @ https://github.com/evolutionaryscale/esm/archive/ba4d7124864eed323a93bf3cfefcd958f573b75a.tar.gz",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[s3,dynamodb,sqs]>=5.0",
    "ruff>=0.5",
]
# Step 6 ADMETAI live wrappers route through ToolUniverseAdapter ->
# ToolUniverse `ADMETAITool` which in turn loads ADMET-AI's local
# PyTorch model ensemble. Install with `pip install -e '.[admet]'` to
# enable live ADMETAI predictions; without the `admet` extra each
# ADMETAI call returns an envelope carrying
# ``status="upstream_error"`` (the project never silently degrades
# the result). We pin the transitive resolution to admet-ai because
# torch / chemprop / scikit-learn / lightning are pulled in by it.
admet = [
    "admet-ai>=2.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
